<resources>
    <string name="app_name">NBA Team Viewer</string>
    <string name="nba_team_viewer">NBA Team Viewer</string>
    <string name="space">\u0020</string>
    <string name="w_string">W</string>
    <string name="l_string">L</string>
    <string name="sort_by_alphabetical_order_asc">Sort teams alphabetically ascending</string>
    <string name="sort_by_alphabetical_order_desc">Sort teams alphabetically descending</string>
    <string name="sort_by_wins_asc">Sort teams by wins ascending</string>
    <string name="sort_by_wins_desc">Sort teams by wins descending</string>
    <string name="sort_by_losses_asc">Sort teams by losses ascending</string>
    <string name="sort_by_losses_desc">Sort teams by losses descending</string>
    <!--Sort type Identifiers-->
    <string name="team_name_asc" translatable="false">TeamNameAsc</string>
    <string name="team_name_desc" translatable="false">TeamNameDesc</string>
    <string name="loss_asc" translatable="false">LossAsc</string>
    <string name="loss_desc" translatable="false">LossDesc</string>
    <string name="win_asc" translatable="false">WinsAsc</string>
    <string name="win_desc" translatable="false">WinsDesc</string>
    <string name="no_internet_message">No internet connection. Make sure Wifi or cellular data is turned on, then try again</string>
    <string name="no_items_found">No items found</string>
</resources>
